@@ -9,11 +9,17 @@ using namespace System::Reflection;
 //#define NxCookingDllMD5 { 0x06, 0x84, 0xF8, 0x16, 0xBE, 0x2E, 0x7E, 0x7B, 0x8E, 0x06, 0x48, 0x94, 0x5A, 0xFE, 0x4B, 0x5A }
 //#define PhysXLoaderDllMD5 { 0x20, 0xB1, 0x17, 0x14, 0xB0, 0xC6, 0x3F, 0x3F, 0x59, 0x4E, 0xC5, 0xDD, 0x6A, 0x00, 0xD7, 0xE6 }
 
-// PhysX 2.8.1.15
-#define RequiredPhysXVersion "2.8.1.15"
-#define NxCharacterDllMD5 { 0x56, 0x23, 0xB2, 0xDE, 0x12, 0x80, 0x07, 0x2B, 0x63, 0xC3, 0x69, 0xB1, 0xBA, 0xC1, 0x10, 0x27 }
-#define NxCookingDllMD5 { 0xD2, 0xD9, 0xBD, 0x51, 0x34, 0xA9, 0xD4, 0xC1, 0x82, 0x52, 0x5B, 0x78, 0x97, 0x34, 0x5B, 0x4E }
-#define PhysXLoaderDllMD5 { 0x63, 0xB3, 0x13, 0xCA, 0xD9, 0xA1, 0x8B, 0x04, 0x49, 0x83, 0x96, 0xB6, 0xAA, 0x96, 0x94, 0x27 }
+// PhysX 2.8.1.15 (October 2008)
+//#define RequiredPhysXVersion "2.8.1.15"
+//#define NxCharacterDllMD5 { 0x56, 0x23, 0xB2, 0xDE, 0x12, 0x80, 0x07, 0x2B, 0x63, 0xC3, 0x69, 0xB1, 0xBA, 0xC1, 0x10, 0x27 }
+//#define NxCookingDllMD5 { 0xD2, 0xD9, 0xBD, 0x51, 0x34, 0xA9, 0xD4, 0xC1, 0x82, 0x52, 0x5B, 0x78, 0x97, 0x34, 0x5B, 0x4E }
+//#define PhysXLoaderDllMD5 { 0x63, 0xB3, 0x13, 0xCA, 0xD9, 0xA1, 0x8B, 0x04, 0x49, 0x83, 0x96, 0xB6, 0xAA, 0x96, 0x94, 0x27 }
+
+// PhysX 2.8.1.21 (January 2009)
+#define RequiredPhysXVersion "2.8.1.21"
+#define NxCharacterDllMD5 { 0x23, 0x3E, 0x75, 0x4B, 0xC5, 0xAF, 0xF9, 0x2F, 0xD2, 0x21, 0xE0, 0xA9, 0xBC, 0x9C, 0x3A, 0xAB }
+#define NxCookingDllMD5 { 0xA3, 0x57, 0x8B, 0xA9, 0x60, 0x03, 0x7B, 0xE8, 0x59, 0x3D, 0x82, 0xE5, 0x8E, 0xBA, 0x2F, 0xED }
+#define PhysXLoaderDllMD5 { 0xC7, 0x9A, 0x6B, 0xDE, 0xA8, 0xC0, 0xD2, 0x97, 0x52, 0xA9, 0xB9, 0x8E, 0xC6, 0xCA, 0x9C, 0xE6 }
 
 namespace StillDesign
 {
